--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,14 +1,16 @@
 .product{
-    width: 300px;
     height: 510px;
     border: 1px solid #95A0A7;
     border-radius: 8px;
     position: relative;
+    overflow: hidden;
+}
+.product-image-container{
+    padding: 7px;
 }
 .product img{
-    width: 285px;
+    width: 100%;
     height: 285px;
-    margin: 7px;
     border-radius: 8px;
 }
 .product-details{
