--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,20 +1,17 @@
 .product{
-    height: 510px;
     border: 1px solid #95A0A7;
     border-radius: 8px;
     position: relative;
-    overflow: hidden;
 }
 .product-image-container{
     padding: 7px;
 }
 .product img{
     width: 100%;
-    height: 285px;
     border-radius: 8px;
 }
 .product-details{
-    margin: 7px;
+    margin: 7px 7px 70px;
 }
 .product-name{
     margin: 5px 0;
